Dev DCRDEX release coverage + images

--- a/journal/202209.md
+++ b/journal/202209.md
@@ -148,7 +148,7 @@ _[DCRDEX](https://github.com/decred/dcrdex) is a non-custodial, privacy-respecti
 
 { _Check https://github.com/decred/dcrdex/commits/master ._}
 
-{ _Check which fixes were made/backported to the v0.5 release branch_ }
+DCRDEX v0.5.3 has been released! The highlight is an experimental Windows app, the `dexc-tray` archive, which starts the DEX client with no terminal, and with a system tray icon. For Windows users, this should feel more natural. Check the [full release notes](https://github.com/decred/dcrdex/releases/tag/v0.5.3) for all new features and fixes. This release again provides its own client binaries that can be used independently from Decrediton. As always, we recommend to [verify them](https://docs.decred.org/advanced/verifying-binaries) before running.
 
 Merged in v0.5.3 release:
 
@@ -189,7 +189,13 @@ Ethereum support:
 
 DCRDEX aims to support trading with lightweight wallets, which is a massive user experience boost compared to having to download full blockchains. For Decred it uses the native SPV protocol and for Bitcoin it relies on the [Neutrino](https://github.com/lightninglabs/neutrino) wallet from Lightning Labs (which itself uses btcsuite). Neutrino forks for Litecoin and Bitcoin Cash are [not as well maintained](https://github.com/decred/dcrdex/pull/1750#issuecomment-1201859406) though, so the team has created [neutrino-bch](https://github.com/dcrlabs/neutrino-bch) and [neutrino-ltc](https://github.com/dcrlabs/neutrino-ltc) forks where changes needed by DCRDEX can be merged sooner. As of writing, they have fixes missing in their upstream repositories for LTC and BCH.
 
-{ image candidates: 1688 }
+![](https://user-images.githubusercontent.com/57448127/184340364-a028fc6f-018b-4709-8198-1699fd8d82f5.png) { upload }
+
+_Image: Fee estimates when withdrawing from DCRDEX._
+
+![](https://user-images.githubusercontent.com/9373513/187228052-4699a9c0-1844-4ed7-ad70-1ae12226948c.png) { upload }
+
+_Image: System tray icon indicates that DEX client is running._
 
 
 ### dcrdata
