--- a/journal/202209.md
+++ b/journal/202209.md
@@ -148,11 +148,11 @@ _[DCRDEX](https://github.com/decred/dcrdex) is a non-custodial, privacy-respecti
 
 { _Check https://github.com/decred/dcrdex/commits/master ._}
 
-DCRDEX v0.5.3 has been released! The highlight is an experimental Windows app, the `dexc-tray` archive, which starts the DEX client with no terminal, and with a system tray icon. For Windows users, this should feel more natural. Check the [full release notes](https://github.com/decred/dcrdex/releases/tag/v0.5.3) for all new features and fixes. This release again provides its own client binaries that can be used independently from Decrediton. As always, we recommend to [verify them](https://docs.decred.org/advanced/verifying-binaries) before running.
+DCRDEX v0.5.3 has been released, featuring an experimental Windows app which starts the DEX client with no terminal, and with a system tray icon. For Windows users, this should feel more natural. Check the [full release notes](https://github.com/decred/dcrdex/releases/tag/v0.5.3) for all new features and fixes. This release again provides its own client binaries that can be used independently from Decrediton. As always, we recommend to [verify them](https://docs.decred.org/advanced/verifying-binaries) before running.
 
 Merged in v0.5.3 release:
 
-- Added external [fallback API for fee info](https://github.com/decred/dcrdex/pull/1695) for BTC RPC wallets ([mempool.space](https://mempool.space/).
+- Added a [fallback API for getting fee info](https://github.com/decred/dcrdex/pull/1695) from external sources. For Bitcoin RPC wallets (i.e. a local Bitcoin Core wallet) it will use [mempool.space](https://mempool.space/) API.
 - Fixed swap/redemption [fee info](https://github.com/decred/dcrdex/pull/1827) and added columns for base and quote fee assets to the CSV export.
 - Fixed 4 [edge cases](https://github.com/decred/dcrdex/pull/1849) with disconnection during trades and invalid responses from the server.
 - Fixed candles [delta overflow](https://github.com/decred/dcrdex/pull/1872) bug.
@@ -164,13 +164,13 @@ User-facing changes merged in `master`:
 - Display [estimated fees](https://github.com/decred/dcrdex/pull/1688) when withdrawing assets.
 - Improved notifications for [placed orders](https://github.com/decred/dcrdex/pull/1803).
 - Added a button to [disable a wallet](https://github.com/decred/dcrdex/pull/1804).
-- Added native [BCH SPV wallet](https://github.com/decred/dcrdex/pull/1635) support. "Native" means the wallet is fully managed by the DEX client without the need to download/install/configure external software, while "SPV" means it works without downloading the BCH blockchain. This currently relies on a [temporary fork](https://github.com/buck54321/neutrino-bch) { or dcrlabs fork? } of [gcash/neutrino](https://github.com/gcash/neutrino) which integrates [upstream](https://github.com/lightninglabs/neutrino) changes needed by DCRDEX, until those changes are merged by the gcash project.
-- Show [recently matched orders](https://github.com/decred/dcrdex/pull/1663) in the [order](https://github.com/decred/dcrdex/pull/1856) they happened.
+- Added native [SPV wallet for Bitcoin Cash](https://github.com/decred/dcrdex/pull/1635). "Native" means the wallet is fully managed by the DEX without the need to download/install/configure external software, while "SPV" means it works without downloading the BCH blockchain. This currently relies on a [temporary fork](https://github.com/buck54321/neutrino-bch) of [gcash/neutrino](https://github.com/gcash/neutrino) with missing changes needed by DCRDEX, until those changes are merged by the gcash project.
+- Added native [SPV wallet for Litecoin](https://github.com/decred/dcrdex/pull/1750), similar to one for BCH.
+- Show [recently matched orders](https://github.com/decred/dcrdex/pull/1663).
 - Show [system tray icon](https://github.com/decred/dcrdex/pull/1828) on Windows, macOS, and Linux.
-- Added native [LTC SPV wallet](https://github.com/decred/dcrdex/pull/1750), similar to one for BCH.
 - Fixed incorrect market [volume](https://github.com/decred/dcrdex/pull/1837) on the Wallets page. { minor? }
-- Fixed confusing [order of steps](https://github.com/decred/dcrdex/pull/1830) on the Order page and added future steps.
-- Other fixes { 1813 1843 1841 1855 }
+- Fixed confusing [ordering of trade steps](https://github.com/decred/dcrdex/pull/1830) on the Order page and added display of future steps to expect.
+- Other fixes { 1813 1843 1841 1855 1856 }
 
 Internal changes merged in `master`:
 
@@ -185,9 +185,9 @@ Internal changes merged in `master`:
 Ethereum support:
 
 - [Babysit](https://github.com/decred/dcrdex/pull/1638) refund and redeem transactions. Unlike the UTXO coins, Ethereum's ability to replace one transaction with another with the same nonce requires a more involved tracking.
-- Update [fees paid](https://github.com/decred/dcrdex/pull/1752) after the transaction is mined (exact fee cannot be known in advance for Ethereum-based assets).
+- Update [fees paid](https://github.com/decred/dcrdex/pull/1752) after the transaction is mined. For Ethereum-based assets, the exact fee paid cannot be known in advance.
 
-DCRDEX aims to support trading with lightweight wallets, which is a massive user experience boost compared to having to download full blockchains. For Decred it uses the native SPV protocol and for Bitcoin it relies on the [Neutrino](https://github.com/lightninglabs/neutrino) wallet from Lightning Labs (which itself uses btcsuite). Neutrino forks for Litecoin and Bitcoin Cash are [not as well maintained](https://github.com/decred/dcrdex/pull/1750#issuecomment-1201859406) though, so the team has created [neutrino-bch](https://github.com/dcrlabs/neutrino-bch) and [neutrino-ltc](https://github.com/dcrlabs/neutrino-ltc) forks where changes needed by DCRDEX can be merged sooner. As of writing, they have fixes missing in their upstream repositories for LTC and BCH.
+DCRDEX aims to support trading with lightweight wallets, which is a massive boost to user experience compared to having to download full blockchains. For Decred it uses the native SPV protocol and for Bitcoin it relies on the [Neutrino](https://github.com/lightninglabs/neutrino) wallet from Lightning Labs (which itself uses btcsuite). Neutrino forks for Litecoin and Bitcoin Cash are [not as well maintained](https://github.com/decred/dcrdex/pull/1750#issuecomment-1201859406) however, so the team has created [neutrino-bch](https://github.com/dcrlabs/neutrino-bch) and [neutrino-ltc](https://github.com/dcrlabs/neutrino-ltc) forks where changes needed by DCRDEX can be merged sooner. As of writing, they have fixes missing in their upstream repositories for LTC and BCH.
 
 ![](https://user-images.githubusercontent.com/57448127/184340364-a028fc6f-018b-4709-8198-1699fd8d82f5.png) { upload }
 
