add initial videos

--- a/journal/202209.md
+++ b/journal/202209.md
@@ -417,7 +417,11 @@ Join our [#ecosystem](https://chat.decred.org/#/room/#ecosystem:decred.org) chat
 
 { _Scan https://www.youtube.com/results?search_query=decred&sp=CAI%253D ._ }
 
-- {}
+- [Decred Community Round Table - DAOs, Governance, Marketing, DEX & More](https://www.youtube.com/watch?v=jz6lX9TMvdY) by @Exitus and @PhoenixGreen
+- [Decred Monthly Recap - New Website, Dev Updates, Politeia 1.4.0, Articles + Interviews & More!](https://youtu.be/7IPj3rWmNY8)by @Exitus
+- [DCRDATA Market Page - Decred Fundamentals](https://www.youtube.com/watch?v=6YW9JiMT2w8) by @PhoenixGreen
+- [DCRDEX added Litecoin Atomic Swap Decentralized Exchange](https://twitter.com/karamblez/status/1573453810005348353) by @Karamble
+- [Why does Decred have its own exchange? - DCRDEX Series](https://youtu.be/7mx3TCPS5rU) by PhoenixGreen
 
 **Audio:**
 
