--- a/journal/202209.md
+++ b/journal/202209.md
@@ -321,18 +321,21 @@ Community stats as of {date} (compared to {date}):
 
 { _Hint: Currently this is a mix of finances and governance. We may add the separate Finances section in the future._ }
 
-In September the new [treasury](https://dcrdata.decred.org/treasury) received {n} DCR worth ${} at September's average rate of ${}. {} DCR was spent to pay contractors, worth ${} at September's rate, or ${} at August's billing rate of ${}.
+In September the new [treasury](https://dcrdata.decred.org/treasury) received 8,848 DCR worth $240K at September's average rate of $27.19. 3,089 DCR was spent to pay contractors, worth $84K at September's rate, or $99K at August's billing rate of $31.93. 
 
-{ _Treasury spend tx recap: how many outputs, min, max DCR_ }
+The [treasury spend transaction](https://explorer.dcrdata.org/tx/c8a4d7fae86645449561a3b414ac7df0ea33b5de03e58ded345ad71c485c9c6b) was mined on August Sep 24, it had 28 outputs ranging from 1 DCR to 961 DCR. The transaction was approved with 6,856 Yes votes and 0 No votes.
 
 { _Any other activity with the legacy or new treasury._ }
 
-As of {date}, combined balance of [legacy](https://dcrdata.decred.org/address/Dcur2mcGjmENx4DhNqDctW5wJCVyT3Qeqkx) and [new treasury](https://dcrdata.decred.org/treasury) is {n} DCR ({n} million USD at ${n.nn}).
+As of Oct 10, combined balance of [legacy](https://dcrdata.decred.org/address/Dcur2mcGjmENx4DhNqDctW5wJCVyT3Qeqkx) and [new treasury](https://dcrdata.decred.org/treasury) is 817,745 DCR (20.9 million USD at $25.51).
 
 { _High-level recap of decision-making activity and most important events._ }
 
-- { Politeia prop update https://proposals.decred.org/record/4475472 }
-- { Scan #proposals for September }
+There were no proposals published on Politeia in September, but a new PR [proposal](https://proposals.decred.org/record/d5221a9) from @lindseymmc was published on Oct 1.
+
+A [proposal idea](https://www.reddit.com/r/decred/comments/xd2ixd/partnership_between_fio_protocol_and_decred/) was posted on reddit suggesting a partnership between FIO Protocol and Decred, it is not asking for funding but instead offering to pay an integration grant to whoever would do the work to integrate FIO within Decred software. FIO is an Interwallet Operability initiative with its own token.
+
+An [update](https://proposals.decred.org/record/4475472) was posted on the Politeia proposal (missed in August) announcing that the site was updated to v1.4.0, with most of the work going into the importing of legacy git backend proposals into trillian, along with some new features like allowing edits to comments within 5 minutes of their posting.
 
 { _Check https://github.com/decredcommunity/proposals/commits/master for updates._ }
 
