Dev Politeia nits and sort
- Use "Added" and "Fixed" over "Add" and "Fix". The rule of thumb I've
  been following is if the action is made by developers, use past tense
  (e.g. Fixed), and when the action is made by software (like new
  behavior), use present tense (e.g. "Skip duplicate comments"). Note
  that Git commit guidelines recommend always using the simplest form
  (Fix) but I think the way we do it reads better. Open to debate.
- Mark fixes more explicitly. For example, "Prevent double rendering"
  actually *fixes* double rendering, because it is a bug. In such cases
  I change the verb to "Fixed" to better see how many bugs were fixed.
- Sorted: Oldest first, then push fixes to the end.
- Made explicit note that the GUI changes are not in the current live
  version but in the WIP GUI remake on the new architecture, which is
  not live yet (I think).

--- a/journal/202209.md
+++ b/journal/202209.md
@@ -105,20 +105,21 @@ _[Politeia](https://github.com/decred/politeia) is Decred's proposal system. It 
 
 }
 
-Politeia:
+Backend:
 
-- Fix [author update](https://github.com/decred/politeia/pull/1679) ordering bug.
-- Add [Politeia v1.4.0 release notes](https://github.com/decred/politeia/pull/1678) to documentation. 
+- Added [v1.4.0 release notes](https://github.com/decred/politeia/pull/1678) to documentation. { _minor_ }
+- Fixed ordering of [proposal author updates](https://github.com/decred/politeia/pull/1679).
 
-Politeia GUI:
+GUI remake on the new [plugin architecture](https://github.com/decred/politeiagui/tree/master/plugins-structure#politeiagui---plugins-structure):
 
-- Numerous [mobile view](https://github.com/decred/politeiagui/pull/2857) improvements for comments, markdown buttons, proposal page etc.
-- Fix to [store errors](https://github.com/decred/politeiagui/pull/2856) on unit tests for 'appSetup' and 'pluginSetup'.
+- 4+ [mobile view](https://github.com/decred/politeiagui/pull/2857) improvements for comments, markdown buttons, proposal page etc.
+- Added [unit tests](https://github.com/decred/politeiagui/pull/2840) for app initialization.
+- Fixed [store errors](https://github.com/decred/politeiagui/pull/2856) discovered with the new tests.
 
-Pi-UI:
+pi-ui library (shared by Politeia and Decrediton):
 
-- Prevent modal [double rendering](https://github.com/decred/pi-ui/pull/463).
-- Improve [mobile view](https://github.com/decred/pi-ui/pull/462).
+- Improved sizes in [mobile view](https://github.com/decred/pi-ui/pull/462).
+- Fixed [double rendering](https://github.com/decred/pi-ui/pull/463) of modals.
 
 
 ### vspd
