Dev vspd add details and sort
- Add a bit more background on what is driving these changes.
- Sorted oldest first.

--- a/journal/202209.md
+++ b/journal/202209.md
@@ -128,8 +128,8 @@ _[vspd](https://github.com/decred/vspd) is server software for running a Voting 
 
 { _Check https://github.com/decred/vspd/commits/master ._}
 
-- Make [database backups](https://github.com/decred/vspd/pull/353) optional.
-- [Move vspd](https://github.com/decred/vspd/pull/352) into command directory.
+- Moved vspd code [into `cmd` direcctory](https://github.com/decred/vspd/pull/352). It is the final step of [removing global variables](https://github.com/decred/vspd/issues/339) and it allows to build multiple executables from a single repository.
+- Made [database backups](https://github.com/decred/vspd/pull/353) optional. Backups are only required by vspd but not by test code or future upcoming tools (such as [vote validator](https://github.com/decred/vspd/pull/335)).
 
 
 ### Lightning Network
