--- a/journal/202209.md
+++ b/journal/202209.md
@@ -14,7 +14,7 @@ _Image: { "Title by @author. Description..." OR just "Description..." }_
 
 - DCRDEX v0.5.3 patch release
 
-- 
+- decred.org received a batch of updates including 4 updated translations
 
 - 
 
@@ -232,31 +232,29 @@ _[dcrweb](https://github.com/decred/dcrweb) is the source code for the decred.or
 
 Translations:
 
-A GUI tool `translator.html` has been added as a resource to [update translations](https://github.com/decred/dcrweb/pull/1058), along with a readme and [instructions](https://github.com/decred/dcrweb/pull/1073).
-
-- Add [Arabic translation](https://github.com/decred/dcrweb/pull/1068).
-- Add [German translation](https://github.com/decred/dcrweb/pull/1069).
-- Add [Polish translation](https://github.com/decred/dcrweb/commit/b5c45cfb0ea14011246c5e8e07ad1632a647ddb2).
-- Add [Chinese translation](https://github.com/decred/dcrweb/pull/1067).
+- Translations infrastrucure received a cleanup and a [GUI tool](https://github.com/decred/dcrweb/pull/1058) update translations ([pioneered](https://github.com/decred/decrediton/pull/3569) in Decrediton), along with usage [instructions](https://github.com/decred/dcrweb/pull/1073).
+- Added/updated [Chinese](https://github.com/decred/dcrweb/pull/1067), [Arabic](https://github.com/decred/dcrweb/pull/1068), [German](https://github.com/decred/dcrweb/pull/1069), and [Polish](https://github.com/decred/dcrweb/pull/1070) translations.
 
 Exchanges:
 
-- Remove [Huobi](https://github.com/decred/dcrweb/pull/1081) from Exchanges due to their [delisting](https://www.huobi.com/support/en-us/detail/104917015223952) of privacy coins.
+- Removed [KuCoin](https://github.com/decred/dcrweb/pull/1064) after it was observed not accepting DCR deposits (although it might be [added back](https://github.com/decred/dcrweb/issues/1087)).
+- Removed [Huobi](https://github.com/decred/dcrweb/pull/1081) from Exchanges due to their [delisting](https://www.huobi.com/support/en-us/detail/104917015223952) of privacy coins.
 
 [Redirects](https://github.com/decred/dcrweb/pull/1061) for moved/deleted pages:
 
-- /Brief and /History now directs to dcrdocs. 
-- /Contributors moved to Decred's Github organization page.
-- Removed secure/sustainable/adaptable pages. Page not found directs to home page.
+- `/brief` and `/history` redirects to their new locations at [docs.decred.org](https://docs.decred.org/). 
+- `/contributors` redirects to Decred's [GitHub org members](https://github.com/orgs/decred/people).
+- Removed Secure/Sustainable/Adaptable pages. "Page not found" page directs to the home page.
 
 Other:
 
-- Add [Richard Red's Blockchain Analysis Part 2](https://blockcommons.red/post/dcr-on-chain-2/) to [Press](https://github.com/decred/dcrweb/pull/1066).
-- Prevent page headings from [wrapping](https://github.com/decred/dcrweb/pull/1065).
+- Added @richardred's [Blockchain Analysis Part 2](https://blockcommons.red/post/dcr-on-chain-2/) to [Press](https://github.com/decred/dcrweb/pull/1066) coverage.
+- Prevent page headings from [wrapping](https://github.com/decred/dcrweb/pull/1065). { _minor fix_ }
+- Fixes { 1072 }
 
 In Progress:
 
-- DCRDEX v0.5 [Press Release](https://github.com/decred/dcrweb/pull/1085).
+- DCRDEX v0.5 [Press Release](https://github.com/decred/dcrweb/pull/1085). { _not too notable for In Progress, drop_ }
 
 { _Check for other new/updated repos in:_
 
