Dev cover dexweb updates

--- a/journal/202209.md
+++ b/journal/202209.md
@@ -193,6 +193,11 @@ Ethereum support:
 - [Babysit](https://github.com/decred/dcrdex/pull/1638) refund and redeem transactions. Unlike the UTXO coins, Ethereum's ability to replace one transaction with another with the same nonce requires a more involved tracking.
 - Update [fees paid](https://github.com/decred/dcrdex/pull/1752) after the transaction is mined. For Ethereum-based assets, the exact fee paid cannot be known in advance.
 
+[dex.decred.org](https://dex.decred.org/) landing page:
+
+- Rewritten [How to get started](https://github.com/decred/dexweb/pull/26).
+- Added [nice icons](https://github.com/decred/dexweb/pull/27) for all 6 supported assets.
+
 DCRDEX aims to support trading with lightweight wallets, which is a massive boost to user experience compared to having to download full blockchains. For Decred it uses the native SPV protocol and for Bitcoin it relies on the [Neutrino](https://github.com/lightninglabs/neutrino) wallet from Lightning Labs (which itself uses btcsuite). Neutrino forks for Litecoin and Bitcoin Cash are [not as well maintained](https://github.com/decred/dcrdex/pull/1750#issuecomment-1201859406) however, so the team has created [neutrino-bch](https://github.com/dcrlabs/neutrino-bch) and [neutrino-ltc](https://github.com/dcrlabs/neutrino-ltc) forks where changes needed by DCRDEX can be merged sooner. As of writing, they have fixes missing in their upstream repositories for LTC and BCH.
 
 ![](https://user-images.githubusercontent.com/57448127/184340364-a028fc6f-018b-4709-8198-1699fd8d82f5.png) { upload }
@@ -202,6 +207,12 @@ _Image: Fee estimates when withdrawing from DCRDEX._
 ![](https://user-images.githubusercontent.com/9373513/187228052-4699a9c0-1844-4ed7-ad70-1ae12226948c.png) { upload }
 
 _Image: System tray icon indicates that DEX client is running._
+
+![](https://user-images.githubusercontent.com/6762864/191453209-f82c5013-e40b-442f-bd1f-bb90a32f1191.png)
+
+_Image: Supported assets in dex.decred.org footer._
+
+{ _I could not resist adding this nice blue footer screenshot. Is 3 images for DEX too much?_ }
 
 
 ### dcrdata
