--- a/journal/202209.md
+++ b/journal/202209.md
@@ -250,9 +250,9 @@ Community stats as of Oct 1 (compared to Sep 1):
 
 { _Hint: Currently this is a mix of finances and governance. We may add the separate Finances section in the future._ }
 
-In September the new [treasury](https://dcrdata.decred.org/treasury) received 8,848 DCR worth $240K at September's average rate of $27.19. 3,089 DCR was spent to pay contractors, worth $84K at September's rate, or $99K at August's billing rate of $31.93. 
+In September the new [treasury](https://dcrdata.decred.org/treasury) received 8,848 DCR worth $241K at September's average rate of $27.19. 3,089 DCR was spent to pay contractors, worth $84K at September's rate, or $99K at August's billing rate of $31.93. 
 
-The [treasury spend transaction](https://explorer.dcrdata.org/tx/c8a4d7fae86645449561a3b414ac7df0ea33b5de03e58ded345ad71c485c9c6b) was mined on August Sep 24, it had 28 outputs ranging from 1 DCR to 961 DCR. The transaction was approved with 6,856 Yes votes and 0 No votes.
+The [treasury spend transaction](https://dcrdata.decred.org/tx/c8a4d7fae86645449561a3b414ac7df0ea33b5de03e58ded345ad71c485c9c6b) was mined on August Sep 24, it had 28 outputs ranging from 1 DCR to 961 DCR. The transaction was approved with 6,856 Yes votes and 0 No votes.
 
 { _Any other activity with the legacy or new treasury._ }
 
@@ -262,9 +262,9 @@ As of Oct 10, combined balance of [legacy](https://dcrdata.decred.org/address/Dc
 
 There were no proposals published on Politeia in September, but a new PR [proposal](https://proposals.decred.org/record/d5221a9) from @lindseymmc was published on Oct 1.
 
-A [proposal idea](https://www.reddit.com/r/decred/comments/xd2ixd/partnership_between_fio_protocol_and_decred/) was posted on reddit suggesting a partnership between FIO Protocol and Decred, it is not asking for funding but instead offering to pay an integration grant to whoever would do the work to integrate FIO within Decred software. FIO is an Interwallet Operability initiative with its own token.
+A [proposal idea](https://www.reddit.com/r/decred/comments/xd2ixd/partnership_between_fio_protocol_and_decred/) was posted on Reddit suggesting a partnership between FIO Protocol and Decred, it is not asking for funding but instead offering to pay an integration grant to whoever would do the work to integrate FIO within Decred software. FIO is an Interwallet Operability initiative with its own token.
 
-An [update](https://proposals.decred.org/record/4475472) was posted on the Politeia proposal (missed in August) announcing that the site was updated to v1.4.0, with most of the work going into the importing of legacy git backend proposals into trillian, along with some new features like allowing edits to comments within 5 minutes of their posting.
+An [update](https://proposals.decred.org/record/4475472) was posted on the Politeia proposal (missed in August) announcing that the site was updated to v1.4.0, with most of the work going into the importing of legacy Git backend proposals into Trillian, along with some new features like allowing edits to comments within 5 minutes of their posting.
 
 { _Check https://github.com/decredcommunity/proposals/commits/master for updates._ }
 
