Dev two reviews says its ok

--- a/journal/202209.md
+++ b/journal/202209.md
@@ -483,6 +483,6 @@ Most information from third parties is relayed directly from the source after a 
 Credits (alphabetical order):
 
 - writing, editing, publishing: { bee, bochinchero, Exitus, jz, l1ndseymm, phoenixgreen, richardred }
-- reviews and feedback: {}
+- reviews and feedback: davecgh, jholdstock
 - title image: {}
 - funding: Decred stakeholders
