--- a/journal/202209.md
+++ b/journal/202209.md
@@ -267,30 +267,32 @@ An [update](https://proposals.decred.org/record/4475472) was posted on the Polit
 
 { _Hint: n, n.n, and n.nn tell how many decimals to keep, e.g. 100, 16.5, 8.63_ }
 
-**Hashrate**: September's [hashrate](https://dcrdata.decred.org/charts?chart=hashrate&scale=linear&bin=block&axis=time) {_set zoom to show the month_} opened at ~{n} Ph/s and closed ~{n} Ph/s, bottoming at {n} Ph/s and peaking at {n} Ph/s throughout the month.
+**Hashrate**: September's [hashrate](https://dcrdata.decred.org/charts?chart=hashrate&zoom=l796eq4a-l8vp7dzk&scale=linear&bin=block&axis=time) opened at ~71 Ph/s and closed ~94 Ph/s, bottoming at 75 Ph/s and peaking at 109 Ph/s throughout the month. { bin=block says it was 65.7-120.6 }
 
 ![](https://raw.githubusercontent.com/bochinchero/dcrsnapshots/main/2022-09/700/Network_Daily_Hashrate.png) { upload }
 
 _Image: Decred hashrate._
 
-Distribution of {} Ph/s hashrate [reported](https://miningpoolstats.stream/decred) by the pools on {date}: {PoolName n%, ...}.
+Distribution of 71 Ph/s hashrate [reported](https://poolbay.io/crypto/54/decred) by the pools on Oct 1: F2Pool 54%, Poolin 36%, BTC.com 6%, AntPool 3.6%, CoinMine 0.7%, unknown 0.3%.
 
 { _Hint: Fallback links for pool distribution: https://poolbay.io/crypto/54/decred , https://dcrstats.com/pow ._ }
 
-Distribution of 1,000 blocks actually [mined](https://miningpoolstats.stream/decred) by {date}: {PoolName n%, ...}.
+Distribution of 1,000 blocks actually [mined](https://miningpoolstats.stream/decred) by Oct 1: F2Pool 49%, Poolin 44%, BTC.com 4%, (likely) AntPool 3%, CoinMine 0.3%.
 
 
 ![](https://raw.githubusercontent.com/bochinchero/dcrsnapshots/main/2022-09/700/Hashrate%20Distribution%20(Phs).png) { upload }
 
 _Image: Pool hashrate distribution._
 
-**Staking**: [Ticket price](https://dcrdata.decred.org/charts?chart=ticket-price&axis=time&visibility=true-true&mode=stepped) {_monthly zoom_} varied between {n}-{n} DCR, with 30-day [average](https://dcrstats.com/) at {n.n} DCR (+{n.n}). { use same t1-t2 for zoom }
+**Staking**: [Ticket price](https://dcrdata.decred.org/charts?chart=ticket-price&zoom=l796eq4a-l8vp7dzk&axis=time&visibility=true-true&mode=stepped) varied between 221-239 DCR, with 30-day [average](https://dcrstats.com/) at 229.1 DCR (-1.1).
 
-The [locked amount](https://dcrdata.decred.org/charts?chart=ticket-pool-value&scale=linear&bin=block&axis=time) {_monthly zoom_} was {n.nn}-{n.nn} million DCR, meaning that {n.n}-{n.n}% of the circulating supply [participated](https://dcrdata.decred.org/charts?chart=stake-participation&scale=linear&bin=block&axis=time) {_monthly zoom_} in Proof of Stake.
+The [locked amount](https://dcrdata.decred.org/charts?chart=ticket-pool-value&zoom=l796eq4a-l8vp7dzk&scale=linear&bin=block&axis=time) was 9.28-9.43 million DCR, meaning that 64.1-65.0% of the circulating supply [participated](https://dcrdata.decred.org/charts?chart=stake-participation&zoom=l796eq4a-l8vp7dzk&scale=linear&bin=block&axis=time) in Proof of Stake. { bin=block says it was 9.24-9.43 and 63.80-65.03 }
 
 { _Add a recap of ticket price action if it was interesting._ }
 
-**VSP**: On {date}, ~{n} (+{n}) live tickets were managed by [listed](https://decred.org/vsp/) vspd servers. Collectively the {n} VSPs managed {n.n}% of the ticket pool (+{n.n}%).
+**VSP**: On Oct 1, ~7,820 (+770) live tickets were managed by [listed](https://decred.org/vsp/) vspd servers. Collectively the 18 VSPs managed 19.1% of the ticket pool (+1.8%).
+
+Biggest gainers in September are vspd.bass.cf (+726) and vspd.stakey.com (+443).
 
 ![](https://raw.githubusercontent.com/bochinchero/dcrsnapshots/main/2022-09/700/Live%20Ticket%20Distribution.png) { upload }
 
@@ -304,15 +306,17 @@ _Image: Distribution of tickets managed by VSPs._
 
 { There's a new missed ticket distro by VSP chart but not sure if we need a one more chart here. Maybe just link it? }
 
-**Nodes**: Node versions captured by [Decred Mapper](https://nodes.jholdstock.uk/user_agents) on {date} ({n} total, dcrd only): v{} - {n}%, ...
+**Nodes**: Node versions captured by [Decred Mapper](https://nodes.jholdstock.uk/user_agents) on Oct 1 (118 total, dcrd only): v1.7.1 - 38%, v1.7.2 - 29%, v1.7.4 - 14%, v1.7.0 - 10%, other - 9%.
+
+{ Has dcrd v1.7.4 been released? Shall we mention it? }
 
 ![](https://raw.githubusercontent.com/bochinchero/dcrsnapshots/main/2022-09/700/Reachable%20Node%20Versions.png) { upload }
 
 _Image: dcrd node version distribution._
 
-{ _Optional_ } The share of [mixed coins](https://dcrdata.decred.org/charts?chart=coin-supply&zoom=jz3q237o-la8vk000&scale=linear&bin=day&axis=time&visibility=true-true-true) varied between {n.n}-{n.n}%. Daily [mixed amount](https://dcrdata.decred.org/charts?chart=privacy-participation&bin=day&axis=time) {_monthly zoom_} varied between {n}-{n}K DCR.
+{ _Optional_ } The share of [mixed coins](https://dcrdata.decred.org/charts?chart=coin-supply&zoom=jz3q237o-la8vk000&scale=linear&bin=day&axis=time&visibility=true-true-true) varied between 60.8-60.9%. Daily [mixed amount](https://dcrdata.decred.org/charts?chart=privacy-participation&bin=day&axis=time) varied between 290-493K DCR.
 
-{ _Optional_ } Decred's [Lightning Network](https://ln-map.jholdstock.uk/) has seen {} nodes (+{}), {} channels (+{}) with a total capacity of {n.n} DCR (+{n.n}), as of {date}.
+{ _Optional_ } Decred's [Lightning Network](https://ln-map.jholdstock.uk/) has seen 70 nodes (+28), 105 channels (+37) with a total capacity of 42.5 DCR (+7.1), as of Oct 1. { jholdstock.uk reported much more nodes/channels (70/105) than decred.lighting (39/64) }
 
 { _Add any interesting analysis or events in the network._ }
 
