--- a/journal/202209.md
+++ b/journal/202209.md
@@ -263,7 +263,7 @@ An [update](https://proposals.decred.org/record/4475472) was posted on the Polit
 
 ## Network
 
-**Hashrate**: September's [hashrate](https://dcrdata.decred.org/charts?chart=hashrate&zoom=l796eq4a-l8vp7dzk&scale=linear&bin=block&axis=time) opened at ~71 Ph/s and closed ~94 Ph/s, bottoming at 75 Ph/s and peaking at 109 Ph/s throughout the month. { bin=block says it was 65.7-120.6 }
+**Hashrate**: September's [hashrate](https://dcrdata.decred.org/charts?chart=hashrate&zoom=l796eq4a-l8vp7dzk&scale=linear&bin=day&axis=time) opened at ~82 Ph/s and closed ~91 Ph/s, bottoming at 75 Ph/s and peaking at 109 Ph/s throughout the month.
 
 ![](https://raw.githubusercontent.com/bochinchero/dcrsnapshots/main/2022-09/700/Network_Daily_Hashrate.png) { upload }
 
@@ -279,17 +279,11 @@ _Image: Pool hashrate distribution._
 
 **Staking**: [Ticket price](https://dcrdata.decred.org/charts?chart=ticket-price&zoom=l796eq4a-l8vp7dzk&axis=time&visibility=true-true&mode=stepped) varied between 221-239 DCR, with 30-day [average](https://dcrstats.com/) at 229.1 DCR (-1.1).
 
-The [locked amount](https://dcrdata.decred.org/charts?chart=ticket-pool-value&zoom=l796eq4a-l8vp7dzk&scale=linear&bin=block&axis=time) was 9.28-9.43 million DCR, meaning that 64.1-65.0% of the circulating supply [participated](https://dcrdata.decred.org/charts?chart=stake-participation&zoom=l796eq4a-l8vp7dzk&scale=linear&bin=block&axis=time) in Proof of Stake. { bin=block says it was 9.24-9.43 and 63.80-65.03 }
+The [locked amount](https://dcrdata.decred.org/charts?chart=ticket-pool-value&zoom=l796eq4a-l8vp7dzk&scale=linear&bin=day&axis=time) was 9.28-9.43 million DCR, meaning that 64.1-64.9% of the circulating supply [participated](https://dcrdata.decred.org/charts?chart=stake-participation&zoom=l796eq4a-l8vp7dzk&scale=linear&bin=day&axis=time) in Proof of Stake.
 
 **VSP**: On Oct 1, ~7,820 (+770) live tickets were managed by [listed](https://decred.org/vsp/) vspd servers. Collectively the 18 VSPs managed 19.1% of the ticket pool (+1.8%).
 
 Biggest gainers in September are vspd.bass.cf (+726) and vspd.stakey.com (+443).
-
-![](https://raw.githubusercontent.com/bochinchero/dcrsnapshots/main/2022-09/700/Live%20Ticket%20Distribution.png) { upload }
-
-_Image: Distribution of solo vs VSP-managed tickets._
-
-{ There's a new missed ticket distro chart but not sure if we need a one more chart here. Maybe just link it? }
 
 ![](https://raw.githubusercontent.com/bochinchero/dcrsnapshots/main/2022-09/700/Voting%20Service%20Provider%20(VSP)%20-%20Live%20Ticket%20Distribution.png) { upload }
 
@@ -297,9 +291,15 @@ _Image: Distribution of tickets managed by VSPs._
 
 { There's a new missed ticket distro by VSP chart but not sure if we need a one more chart here. Maybe just link it? }
 
+![](https://raw.githubusercontent.com/bochinchero/dcrsnapshots/main/2022-09/700/Live%20Ticket%20Distribution.png) { upload }
+
+_Image: Distribution of solo vs VSP-managed tickets._
+
+{ There's a new missed ticket distro chart but not sure if we need a one more chart here. Maybe just link it? }
+
 **Nodes**: Node versions captured by [Decred Mapper](https://nodes.jholdstock.uk/user_agents) on Oct 1 (118 total, dcrd only): v1.7.1 - 38%, v1.7.2 - 29%, v1.7.4 - 14%, v1.7.0 - 10%, other - 9%.
 
-{ Has dcrd v1.7.4 been released? Shall we mention it? }
+Note: [dcrd v1.7.4](https://github.com/decred/dcrd/releases/tag/release-v1.7.4) was a source-only release with the main goal to fix the stalled testnet.
 
 ![](https://raw.githubusercontent.com/bochinchero/dcrsnapshots/main/2022-09/700/Reachable%20Node%20Versions.png) { upload }
 
@@ -307,7 +307,7 @@ _Image: dcrd node version distribution._
 
 { _Optional_ } The share of [mixed coins](https://dcrdata.decred.org/charts?chart=coin-supply&zoom=jz3q237o-la8vk000&scale=linear&bin=day&axis=time&visibility=true-true-true) varied between 60.8-60.9%. Daily [mixed amount](https://dcrdata.decred.org/charts?chart=privacy-participation&bin=day&axis=time) varied between 290-493K DCR.
 
-{ _Optional_ } Decred's [Lightning Network](https://ln-map.jholdstock.uk/) has seen 70 nodes (+28), 105 channels (+37) with a total capacity of 42.5 DCR (+7.1), as of Oct 1. { jholdstock.uk reported much more nodes/channels (70/105) than decred.lighting (39/64) }
+Decred's [Lightning Network](https://ln-map.jholdstock.uk/) explorer has seen 70 nodes (+28), 105 channels (+37) with a total capacity of 42.5 DCR (+7.1), as of Oct 1. Note that this differs from another explorer at [decred.lighting](https://decred.lighting/) which reported 39 nodes, 64 channels and total capacity of 39 DCR.
 
 
 ## Ecosystem
