--- a/journal/202209.md
+++ b/journal/202209.md
@@ -333,15 +333,15 @@ Join our [#ecosystem](https://chat.decred.org/#/room/#ecosystem:decred.org) chat
 
 { _Summarize outreach/communications/marketing/PR activity for past month and any short-term plans. "Outreach" is anything about "sending our message out". Here is the "big picture" stuff while Events and Media go into the details._ }
 
-Monde PR’s achievements: 
+Monde PR's achievements:
 
-- Pitched one news update
-- Secured one media interview 
-- Responded to three requests for comments
+- Pitched 1 news update.
+- Secured 1 media interview.
+- Responded to 3 requests for comments.
 
 Secured the following news articles:
 
-- @buck54321 was featured in Authority Magazine's series on [the future of money and banking](https://medium.com/authority-magazine/brian-buck-stafford-of-decred-on-the-future-of-money-and-banking-45f25305b409). The piece includes a deep dive on DCRDEX and the benefits of P2P, along with points on the Lightning Network, the importance of self custody, and decentralization. 
+- @buck54321 was featured in Authority Magazine's series on [the future of money and banking](https://medium.com/authority-magazine/brian-buck-stafford-of-decred-on-the-future-of-money-and-banking-45f25305b409). The piece includes a deep dive on DCRDEX and the benefits of P2P, along with points on the Lightning Network, the importance of self custody, and decentralization.
 - @jz was quoted in [Axios](https://www.axios.com/2022/09/15/privacy-coins-test-crypto-exchanges-comfort-with-compliance), on how the future of cryptocurrency includes strong privacy guarantees, in response to Huobi Global delisting DCR and six other privacy coins.
 
 
