--- a/journal/202209.md
+++ b/journal/202209.md
@@ -349,10 +349,14 @@ Secured the following news articles:
 
 **Attended:**
 
-- DCR was mentioned in HCPP22
-  - https://twitter.com/cryptotnetennba/status/1575969203835715584
-  - https://twitter.com/fulmolightning/status/1575887983978622976
-  - { bee: small mention but I like the point to use the coin }
+- Paul Rosenberg mentioned Decred at Hackers Congress Paralelni Polis (Prague, Czech Republic). It was a small appearnace on [one slide](https://twitter.com/cryptotnetennba/status/1575969203835715584) but with an important idea:
+
+> BTC, BCH, Decred, Scrit, whatever.. **Use** it.  
+> Start publishing prices in sats; let people learn how to convert.  
+> Setup middlemen if you like.  
+> Take a year to transition if necessary, but we must use our money.
+
+{ _Can also move to Discussions if this is too small for Events_ }
 
 **Upcoming:**
 
