Media add DM stats

--- a/journal/202209.md
+++ b/journal/202209.md
@@ -361,6 +361,19 @@ Secured the following news articles:
 
 { _Put notable community content efforts or new projects at the beginning. e.g. a new website, new podcast series, or an important guide how to make the network more robust._ }
 
+Decred Magazine engagement stats for September:
+
+- Total number of articles on DM: 318
+- Newsletter subscribers: 66
+- New posts and newsletters sent: 13
+- Active social media campaigns: 12
+- Social media posts: 151
+- Likes: 662
+- Re-tweets: 114
+- Social media followers across all platforms and accounts: 973
+
+Twitter users can support [@Decredmagazine](https://twitter.com/decredmagazine) with follows, likes and retweets to help spread the message.
+
 { _Hint: For bullet lists below, use the following format: [Sentence case title]({link}) by @author - optional comment._ }
 
 **Selected articles:**
