Dev add missed dcrwebapi

--- a/journal/202209.md
+++ b/journal/202209.md
@@ -228,6 +228,13 @@ In Progress:
 - DCRDEX v0.5 [Press Release](https://github.com/decred/dcrweb/pull/1085). { _not too notable for In Progress, drop_ }
 
 
+### Other
+
+[dcrwebapi](https://github.com/decred/dcrwebapi) (mainly used to get VSP information):
+
+- Added [block height](https://github.com/decred/dcrwebapi/pull/167) and estimated network proportion to the VSP response. Unlike the last updated timestamp (currently shown at the [VSP list](https://decred.org/vsp/)), block height allows to more accurately determine if the VSP has stalled.
+- Removed [unused endpoints](https://github.com/decred/dcrwebapi/pull/170). The one to get coin supply (`gcs`) is replaced by a better maintained [dcrdata API](https://github.com/decred/dcrdata#apis) (the `/supply` endpoint), while the download count (`dc`) was only a very rough estimate based on a quite basic heuristic. If you know anyone using these endpoints please report in [issue 169](https://github.com/decred/dcrwebapi/issues/169).
+
 ## People
 
 { _Discover and greet new non-developer contributors too._ }
