--- a/journal/202209.md
+++ b/journal/202209.md
@@ -235,6 +235,7 @@ In Progress:
 - Added [block height](https://github.com/decred/dcrwebapi/pull/167) and estimated network proportion to the VSP response. Unlike the last updated timestamp (currently shown at the [VSP list](https://decred.org/vsp/)), block height allows to more accurately determine if the VSP has stalled.
 - Removed [unused endpoints](https://github.com/decred/dcrwebapi/pull/170). The one to get coin supply (`gcs`) is replaced by a better maintained [dcrdata API](https://github.com/decred/dcrdata#apis) (the `/supply` endpoint), while the download count (`dc`) was only a very rough estimate based on a quite basic heuristic. If you know anyone using these endpoints please report in [issue 169](https://github.com/decred/dcrwebapi/issues/169).
 
+
 ## People
 
 { _Discover and greet new non-developer contributors too._ }
@@ -314,7 +315,7 @@ _Image: dcrd node version distribution._
 
 { _Optional_ } The share of [mixed coins](https://dcrdata.decred.org/charts?chart=coin-supply&zoom=jz3q237o-la8vk000&scale=linear&bin=day&axis=time&visibility=true-true-true) varied between 60.8-60.9%. Daily [mixed amount](https://dcrdata.decred.org/charts?chart=privacy-participation&bin=day&axis=time) varied between 290-493K DCR.
 
-Decred's [Lightning Network](https://ln-map.jholdstock.uk/) explorer has seen 70 nodes (+28), 105 channels (+37) with a total capacity of 42.5 DCR (+7.1), as of Oct 1. Note that this differs from another explorer at [decred.lighting](https://decred.lighting/) which reported 39 nodes, 64 channels and total capacity of 39 DCR.
+Decred's [Lightning Network](https://ln-map.jholdstock.uk/) explorer has seen 70 nodes (+28), 105 channels (+37) with a total capacity of 42.5 DCR (+7.1), as of Oct 1.
 
 
 ## Ecosystem
@@ -511,6 +512,6 @@ Most information from third parties is relayed directly from the source after a 
 Credits (alphabetical order):
 
 - writing, editing, publishing: { bee, bochinchero, Exitus, jz, l1ndseymm, phoenixgreen, richardred }
-- reviews and feedback: davecgh, jholdstock
+- reviews and feedback: davecgh, jholdstock, karamble
 - title image: {}
 - funding: Decred stakeholders
