DEX release section draft

--- a/journal/202209.md
+++ b/journal/202209.md
@@ -41,6 +41,61 @@ Contents: { _Sync ToC at the very end, when all text is finished_ }
 { _Add individual sections for high-impact announcements before Development, such as consensus votes, software releases, milestones, major bugs, etc._ }
 
 
+## DCRDEX v0.5.3 Released
+
+{ _Hint: v0.5.0 came out in August but v0.5.3 is the first publicly announced release in v0.5 series so we compare it to v0.4.3._ }
+
+{ _Maybe split features in groups for easier reading_ }
+
+{ Feature highlights of v0.5
+
+- Built-in lightweight DCR wallet. Using dcrwallet or Decrediton in SPV mode (not full node) was already supported, but now no external wallet software is even required to trade DCR. However, users should continue with their existing Decred wallet software that has all the governance features that makes Decred great.
+
+- Trading BTC and LTC using Electrum wallets. Electrum wallets have weak privacy but they are very popular and easy to use so supporting them lowers the barrier for many.
+
+- DCRDEX can now work with mixed account configurations when using dcrwallet or Decrediton as the external DCR wallet, allowing Decred's privacy features to be used automatically when trading.
+
+- Swap options may be set at time of placement of each order rather than in the wallet settings. This includes pre-sizing funds to avoid overlocking of UTXOs, and specifying higher network fee rates.
+
+- Improved send/withdraw controls, allowing a complete sweep of the wallet minus transaction fees, or sending a precise amount like most wallets.
+
+- Bitcoin swap acceleration using CPFP transactions to increase the swap fee rate in the event of a network fee spike. This has not been in demand much recently, but we have encountered rapid increases in Bitcoin fee rates in the past where this is valuable.
+
+- Fiat currency value display. When enabled by the user, current USD exchange rates for all assets will be used to show equivalent fiat values on the UI.
+
+- QR code display for wallet receiving addresses.
+
+- Rescan and recover functionality for the native BTC SPV wallet. You may also now reconfigure the native BTC wallet’s “birthday” to change the scope of the rescan.
+
+- Add the option to obtain Decred network fee rates from dcrdata when the client wallet is unable.
+
+- Bitcoin “descriptor” wallets are now supported. This only applies to users of the Bitcoin Core software, not the native BTC wallet, who also choose to create this type of wallet that is becoming the default in future versions of Bitcoin Core.
+
+- Support for the latest Litecoin Core software (v0.21) that introduced MWEB (private addresses). Note: regular addresses are used for trades.
+
+- Initial Zcash (ZEC) support using zcashd and unshielded addresses for trading. Note: ZEC trading pairs are not yet live at dex.decred.org (but impatient server admins can try it).
+
+- TODO finish v0.5.0, then harvest v0.5.1 v0.5.2 and v0.5.3 relnotes
+
+- https://decred.org/news/2022-09-28_decred_releases_dcrdex_0.5/
+- https://github.com/decred/dcrdex/releases/tag/v0.5.0
+- https://github.com/decred/dcrdex/releases/tag/v0.5.1
+- https://github.com/decred/dcrdex/releases/tag/v0.5.2
+- https://github.com/decred/dcrdex/releases/tag/v0.5.3
+- https://github.com/decred/dcrdex/releases/tag/v0.5.4
+
+}
+
+While using DCRDEX is more complex compared to traditional exchanges, it is worth noting how accessible it is as a desktop app. DEX client has a single file user needs to "install" (copy) and run. Then open the trading interface in a browser, but it's served locally and is fast. Builds are provided for Windows, macOS, Linux (x64, ARM and RISC-V CPUs) and even FreeBSD and OpenBSD.
+
+
+## LTC Trading Enabled at dex.decred.org
+
+{ image: New pairs https://twitter.com/DecredSociety/status/1575934440546574336 }
+
+Some users are naturally [confused](https://twitter.com/SoapboxBueller/status/1575909321136754688) by the two steps of adding new assets to DCRDEX. A new asset is first added in "the code", but it does not automatically add new trading pairs and so this step is not visible by the end users. Then, after sufficient testing and preparation, new pairs go live at the main trading server (dex.decred.org). Third party server operators may list new pairs sooner but we are not aware of any at the moment.
+
+
 ## Development
 
 The work reported below has the "merged to master" status unless noted otherwise. It means that the work is completed, reviewed, and integrated into the source code that advanced users can [build and run](https://medium.com/@artikozel/the-decred-node-back-to-the-source-part-one-27d4576e7e1c), but is not yet available in release binaries for regular users.
