Cleanup some todos

--- a/journal/202209.md
+++ b/journal/202209.md
@@ -486,12 +486,6 @@ Also, DM is coming to Instagram! Check [@decredmagazine](https://www.instagram.c
 
 ## Discussions
 
-Comm systems news:
-
-- { _e.g. added/removed chant channels, changes how comms work, etc_ }
-
-{ _Hint: Interesting discussions that generated new ideas or perspectives._ }
-
 Five community members discussed governance, marketing, DEX and many other topics in the new [Community Roundtable episode](https://www.youtube.com/watch?v=jz6lX9TMvdY) on Decred's YouTube channel.
 
 Selected Reddit posts:
@@ -509,8 +503,6 @@ Selected Twitter discussions:
 
 In September DCR was trading between USD 23.30-34.70 / BTC 0.00124-0.00175. The average daily rate was $27.19.
 
-{ maybe one of the educational vids will fit in Markets too? }
-
 *The following is not investment advice.*
 
 New market coverage by @Applesaucesome: [Light at the end of the tunnel](https://www.decredmagazine.com/decred-light-at-the-end-of-the-tunnel/) and [The one where everything looks bad but I post lots of hopium](https://www.decredmagazine.com/the-one-where-i-post-lots-of-hopium/).
@@ -523,30 +515,12 @@ Image: "Decred's BTC pairing is really interesting to watch when you zoom way ou
 
 On YouTube technical analysis for DCR has been made by [More Crypto Online](https://www.youtube.com/watch?v=oP1-Ie5jFzo) ("it is one of the best altcoin charts out there but there is no guarantee for it to work out"), [Jacob Crypto Bury](https://www.youtube.com/watch?v=FopCO-7UiaA), and [Schulz & Team Analytik](https://www.youtube.com/watch?v=begoqsTKdOI&t=586s) (German).
 
-{ _Optional: Markets overview, USD and BTC price trends, highs and lows, interesting events, interesting analysis._ }
-
-{ _DCRDEX updates, esp. trading volume dynamics._ }
-
 ![](https://raw.githubusercontent.com/bochinchero/dcrsnapshots/main/2022-09/700/DEX_Monthly_Vol_USD.png) { upload }
 
 _Image: DCRDEX monthly volume in USD._
 
 
 ## Relevant External
-
-{ _Hint: Besides dramatic "epic fails", try to also report some "epic wins" in areas relevant to Decred. We can learn from both._ }
-
-{ _Hint: Follow or not follow the suggested grouping of stories below._ }
-
-{ _Cryptocurrency L1 tech: PoW, ASIC resistance, full nodes, network security, etc._ }
-
-{ _L2+ tech: "Smart" contracts, DEX projects._ }
-
-{ _Governance, finances, funding, chain forks, community splits._ }
-
-{ _Relevant exchanges and websites._ }
-
-{ _Other: Regulations, privacy, security, fun._ }
 
 OFAC has [clarified](https://home.treasury.gov/taxonomy/term/1546) how the sanctions against the Tornado Cash addresses are supposed to work.  The people who received unsolicited nominal sums from Tornado Cash (someone was trolling) are technically in breach of the sanctions but they can fill in a blocked property form to avoid prosecution.
 
@@ -569,7 +543,7 @@ Most information from third parties is relayed directly from the source after a 
 
 Credits (alphabetical order):
 
-- writing, editing, publishing: { bee, bochinchero, Exitus, jz, l1ndseymm, phoenixgreen, richardred }
+- writing, editing, publishing: bee, bochinchero, Exitus, jz, l1ndseymm, phoenixgreen, richardred
 - reviews and feedback: davecgh, jholdstock, karamble
 - title image: {}
 - funding: Decred stakeholders
