--- a/journal/202209.md
+++ b/journal/202209.md
@@ -12,7 +12,9 @@ _Image: { "Title by @author. Description..." OR just "Description..." }_
 
 { _Month's highlights, no links here, 5-7 bullets max._
 
-- DCRDEX v0.5.3 patch release with a LTC trading enabled and a new standalone app
+- DCRDEX v0.5 public release made trading more accessible
+
+- LTC pairs live on dex.decred.org
 
 - decred.org received a batch of updates including 4 updated translations
 
@@ -43,13 +45,13 @@ Contents: { _Sync ToC at the very end, when all text is finished_ }
 
 ## DCRDEX v0.5 Released
 
-DCRDEX v0.5.3 was the first publicly announced release in the v0.5 series, followed by v0.5.4 in October with a critical fix for all Bitcoin wallets.
+DCRDEX v0.5.3 was the first [publicly announced](https://twitter.com/decredproject/status/1575900485864853504) release in the v0.5 series, followed by v0.5.4 in October with a critical fix for all Bitcoin wallets.
 
 v0.5 makes trading more accessible, stable, and convenient. Major changes since v0.4:
 
 - Built-in lightweight DCR wallet. Using dcrwallet or Decrediton in SPV mode (not full node) was already supported, but now no external wallet software is even required to trade DCR. However, users should continue with their existing Decred wallet software that has all the governance features that makes Decred great.
 
-- Trading BTC and LTC using Electrum wallets. Electrum wallets have weak privacy but they are very popular and easy to use so supporting them lowers the barrier for many.
+- Using Electrum wallets for trading BTC and LTC. Electrum wallets have weak privacy but they are very popular and easy to use so supporting them lowers the barrier for many.
 
 - DCRDEX can now work with mixed account configurations when using dcrwallet or Decrediton as the external DCR wallet, allowing Decred's privacy features to be used automatically when trading.
 
@@ -57,27 +59,21 @@ v0.5 makes trading more accessible, stable, and convenient. Major changes since 
 
 - Improved send/withdraw controls, allowing a complete sweep of the wallet minus transaction fees, or sending a precise amount like most wallets.
 
+- QR code display for wallet receiving addresses.
+
 - Bitcoin swap acceleration using CPFP transactions to increase the swap fee rate in the event of a network fee spike. This has not been in demand much recently, but we have encountered rapid increases in Bitcoin fee rates in the past where this is valuable.
 
 - Fiat currency value display. When enabled by the user, current USD exchange rates for all assets will be used to show equivalent fiat values on the UI.
 
-- QR code display for wallet receiving addresses.
+- Bitcoin "descriptor" wallets are now supported. This only applies to users of the Bitcoin Core software (not the built-in BTC wallet), who also choose to create this type of wallet that is becoming the default in future versions of Bitcoin Core.
 
 - Rescan and recover functionality for the native BTC SPV wallet. You may also now reconfigure the native BTC wallet's "birthday" to change the scope of the rescan.
 
-- Add the option to obtain Decred network fee rates from dcrdata when the client wallet is unable.
-
-- Bitcoin "descriptor" wallets are now supported. This only applies to users of the Bitcoin Core software, not the native BTC wallet, who also choose to create this type of wallet that is becoming the default in future versions of Bitcoin Core.
-
 - Support for the latest Litecoin Core software (v0.21) that introduced MWEB (private addresses). Note: regular addresses are used for trades.
 
-- Initial Zcash (ZEC) support using zcashd and unshielded addresses for trading. Note: ZEC trading pairs are not yet live at dex.decred.org (but impatient server admins can try it).
+- Initial Zcash (ZEC) support using zcashd and unshielded addresses for trading. Note: ZEC trading pairs are not yet live at dex.decred.org.
 
-- Experimental Windows build which starts the DEX client with no terminal, and with a system tray icon. For Windows users, this should feel more natural.
-
-- Many other stability and quality of life improvements.
-
-{ _Maybe split features in groups for easier reading and/or drop some items to shorten this section._ }
+- Experimental Windows build which starts the DEX client with no terminal, and with a system tray icon. This should feel more natural for Windows users.
 
 While DCRDEX is more complex compared to traditional exchanges, it is worth noting how accessible it is as a desktop app. DEX client is a single file that requires no installation. User interface quickly loads from local files. Builds are available for Windows, macOS, Linux (x64, ARM and RISC-V CPUs) and even FreeBSD and OpenBSD.
 
@@ -89,8 +85,6 @@ Check the [full release notes](https://github.com/decred/dcrdex/releases) for th
 { image: New pairs https://twitter.com/DecredSociety/status/1575934440546574336 }
 
 _Image: LTC pairs are live at dex.decred.org!_
-
-{ Maybe use this too: https://twitter.com/decredproject/status/1575900485864853504 }
 
 Some users are naturally [confused](https://twitter.com/SoapboxBueller/status/1575909321136754688) by the two ways how an asset can be "supported" by DCRDEX:
 
