--- a/journal/202209.md
+++ b/journal/202209.md
@@ -57,7 +57,7 @@ DCRDEX v0.5.3 was the first [publicly announced](https://twitter.com/decredproje
 
 - Bitcoin "descriptor" wallets are now supported. This only applies to users of the Bitcoin Core software (not the built-in BTC wallet), who also choose to create this type of wallet that is becoming the default in future versions of Bitcoin Core.
 
-- Rescan and recover functionality for the native BTC SPV wallet. You may also now reconfigure the native BTC wallet's "birthday" to change the scope of the rescan (younger wallets are faster to scan).
+- Rescan and recover functionality for the built-in BTC SPV wallet. You may also now reconfigure the built-in BTC wallet's "birthday" to change the scope of the rescan (younger wallets are faster to scan).
 
 - Experimental Windows build which starts the DEX client with no terminal, and with a system tray icon. This should feel more natural for Windows users.
 
@@ -96,14 +96,13 @@ _[dcrd](https://github.com/decred/dcrd) is a full node implementation that power
 
 September was mostly about optimization and cleanup:
 
-- Optimized block template generation to not fetch [inputs for coinbase](https://github.com/decred/dcrd/pull/2994) transaction (one that mints new coins) because it cannot have inputs.
-- [Optimized memory](https://github.com/decred/dcrd/pull/2993) used by transaction script copying. { _minor, maybe group in Optimizations_ }
-- Restored [spend journal cleanup logic](https://github.com/decred/dcrd/pull/2997) when blocks are disconnected (it was removed as part of a larger cleanup). { _minor, maybe group in Fixes_ }
+- Optimized block template generation to not fetch [inputs for the coinbase](https://github.com/decred/dcrd/pull/2994) transaction (one that creates new coins) because it cannot have inputs.
+- [Optimized memory](https://github.com/decred/dcrd/pull/2993) used by transaction script copying.
 - Deprecated the [`--blockminsize`](https://github.com/decred/dcrd/pull/3002) CLI option. It allowed to add low-fee or free transactions into a block while the block was below the specified minimum size. The policy allowing to relay such low-fee/free transactions was [removed](https://github.com/decred/dcrd/pull/2964) (and replaced with the Child Pays For Parent technique) and so this CLI option is no longer needed.
-- Reworked [UTXO cache](https://github.com/decred/dcrd/pull/2995) to improve its robustness, optimize it, and correct some hard to hit corner cases. This cache provides fast access to coins in circulation (aka Unspent Transaction Outputs - UTXO) and is essential for performance, because on a high level each block spends existing coins and creates new coins. Since it is consensus critical code, the rework was split into 19 independent changes to make it easier to review.
+- Reworked [UTXO cache](https://github.com/decred/dcrd/pull/2995) to improve its robustness, optimize it, and correct some hard to hit corner cases. This cache provides fast access to coins in circulation (aka Unspent Transaction Outputs - UTXO) and is essential for performance, because each block basically spends existing coins and creates new coins. Since it is consensus critical code, the rework was split into 19 independent changes to make it easier to review.
 - Added a database migration to [remove UTXOs that cannot be spent](https://github.com/decred/dcrd/pull/2996). Specifically, coins created by the `treasurybase` transaction (the 10% part of the block reward that goes to treasury) are never directly spendable and thus should not take space in the UTXO database.
 - Removed mempool and mining code dealing with [low-fee and free tx relay policy](https://github.com/decred/dcrd/pull/3003). Related `--blockprioritysize` option and fields in the `getrawmempool` response have been deprecated.
-- Maintenance: refactoring { 3000 }, upgrades { 2992 } and cleanup { 2998 3001 3004 }
+- ~6 other maintenance PRs (refactoring, upgrades, cleanup).
 
 
 ### dcrwallet
@@ -128,7 +127,6 @@ _[Politeia](https://github.com/decred/politeia) is Decred's proposal system. It 
 
 Backend:
 
-- Added [v1.4.0 release notes](https://github.com/decred/politeia/pull/1678) to documentation. { _minor_ }
 - Fixed ordering of [proposal author updates](https://github.com/decred/politeia/pull/1679).
 
 GUI remake on the new [plugin architecture](https://github.com/decred/politeiagui/tree/master/plugins-structure#politeiagui---plugins-structure):
@@ -166,7 +164,7 @@ _[DCRDEX](https://github.com/decred/dcrdex) is a non-custodial, privacy-respecti
 
 Merged in v0.5.3 release:
 
-- Added a [fallback API for getting fee info](https://github.com/decred/dcrdex/pull/1695) from external sources. For Bitcoin RPC wallets (i.e. a local Bitcoin Core wallet) it will use [mempool.space](https://mempool.space/) API.
+- Added a [fallback API for getting fee info](https://github.com/decred/dcrdex/pull/1695) from external sources. For Bitcoin RPC wallets (like a local Bitcoin Core wallet) it will use [mempool.space](https://mempool.space/) API.
 - Fixed swap/redemption [fee info](https://github.com/decred/dcrdex/pull/1827) and added columns for base and quote fee assets to the CSV export.
 - Fixed 4 [edge cases](https://github.com/decred/dcrdex/pull/1849) with disconnection during trades and invalid responses from the server.
 - Fixed candles [delta overflow](https://github.com/decred/dcrdex/pull/1872) bug.
@@ -178,35 +176,33 @@ User-facing changes merged in `master`:
 - Display [estimated fees](https://github.com/decred/dcrdex/pull/1688) when withdrawing funds.
 - Improved notifications for [placed orders](https://github.com/decred/dcrdex/pull/1803).
 - Added a button to [disable a wallet](https://github.com/decred/dcrdex/pull/1804).
-- Added native [SPV wallet for Bitcoin Cash](https://github.com/decred/dcrdex/pull/1635). "Native" means the wallet is fully managed by the DEX without the need to download/install/configure external software (the BCH wallet), while "SPV" means it works without downloading the BCH blockchain. This currently relies on a [temporary fork](https://github.com/buck54321/neutrino-bch) of [gcash/neutrino](https://github.com/gcash/neutrino) with extra changes needed by DCRDEX, until those changes are merged by the gcash project.
-- Added native [SPV wallet for Litecoin](https://github.com/decred/dcrdex/pull/1750), similar to one for BCH.
+- Added built-in [SPV wallet for Bitcoin Cash](https://github.com/decred/dcrdex/pull/1635). "Built-in" means the wallet is fully managed by the DEX without the need to download/install/configure external software (the BCH wallet), while "SPV" means it works without downloading the BCH blockchain. This currently relies on a [temporary fork](https://github.com/buck54321/neutrino-bch) of [gcash/neutrino](https://github.com/gcash/neutrino) with extra changes needed by DCRDEX, until those changes are merged by the upstream gcash project.
+- Added built-in [SPV wallet for Litecoin](https://github.com/decred/dcrdex/pull/1750), similar to one for BCH.
 - Show [recently matched orders](https://github.com/decred/dcrdex/pull/1663).
 - Show [system tray icon](https://github.com/decred/dcrdex/pull/1828) on Windows, macOS, and Linux.
-- Fixed incorrect market [volume](https://github.com/decred/dcrdex/pull/1837) on Wallets page. { minor? }
+- Fixed incorrect market [volume](https://github.com/decred/dcrdex/pull/1837) on Wallets page.
 - Fixed confusing [ordering of trade steps](https://github.com/decred/dcrdex/pull/1830) on the Order page and added display of future steps to expect.
-- Other fixes { 1813 1843 1841 1855 1856 }
+- ~5 other fixes.
 
 Internal changes merged in `master`:
 
 - Replaced uses of `settxfee` method with a more robust [`fee_rate` argument](https://github.com/decred/dcrdex/issues/1706) to `sendtoaddress`. It is only supported with recent versions of Bitcoin Core and its clones. Wallets based on older Bitcoin Core will continue to use `settxfee` (BCH, DOGE, ZEC).
 - Added a tool for finding missing notification [translations](https://github.com/decred/dcrdex/pull/1835). Also, notifications will fall back to English strings if a translation is missing.
-- Clients will no longer accept signatures of [truncated messages](https://github.com/decred/dcrdex/pull/1526) - a bug where in some places truncated message data was signed and verified without getting hashed first. The PR explains why this bug was hard to exploit but also quite tricky to fix. This change is the last step of the 4-stage plan to roll out the fix with minimum disruption to older clients.
-- Other fixes { 1838 1846 1852 1860 1873 1876 }
-- Code maintenance { 1836 1831 1859 1851 }
-- Testing { 1742 }
-- Documentation { 1842 1839 1824 }
+- Clients will no longer accept signatures of [truncated messages](https://github.com/decred/dcrdex/pull/1526) - a bug where in some places message data was not hashed before getting signed or verified. The PR explains why this bug was hard to exploit but also quite tricky to fix. This change is the last step of the 4-stage plan to roll out the fix with minimum disruption to older clients.
+- ~6 other fixes.
+- ~8 changes for code maintenance, testing, and documentation.
 
 Ethereum support:
 
 - [Babysit](https://github.com/decred/dcrdex/pull/1638) refund and redeem transactions. Unlike UTXO coins, Ethereum's ability to replace one transaction with another with the same nonce requires more involved tracking.
-- Update [fees paid](https://github.com/decred/dcrdex/pull/1752) after the transaction is mined. For Ethereum-based assets, the exact fee paid cannot be known in advance.
+- [Update fees paid](https://github.com/decred/dcrdex/pull/1752) after the transaction is mined. For Ethereum-based assets, the exact fee paid cannot be known in advance.
 
 [dex.decred.org](https://dex.decred.org/) landing page:
 
 - Rewritten [How to get started](https://github.com/decred/dexweb/pull/26) text.
 - Added [nice icons](https://github.com/decred/dexweb/pull/27) for all 6 supported assets.
 
-DCRDEX aims to support trading with lightweight wallets, which is a massive boost to user experience compared to having to download full blockchains. For Decred it uses its native SPV protocol and for Bitcoin it relies on the [Neutrino](https://github.com/lightninglabs/neutrino) wallet from Lightning Labs (which itself uses btcsuite). Neutrino forks for Litecoin and Bitcoin Cash are [not as well maintained](https://github.com/decred/dcrdex/pull/1750#issuecomment-1201859406) however, so the team has created [neutrino-bch](https://github.com/dcrlabs/neutrino-bch) and [neutrino-ltc](https://github.com/dcrlabs/neutrino-ltc) forks where changes needed by DCRDEX can be merged quickly. As of writing, they have fixes missing in their upstream repositories for LTC and BCH.
+DCRDEX aims to support trading with lightweight wallets, which is a massive boost to user experience compared to having to download full blockchains. For Decred it uses its native SPV protocol and for Bitcoin it relies on the [Neutrino](https://github.com/lightninglabs/neutrino) wallet from Lightning Labs (which itself is based on btcsuite - Decred's parent). Neutrino forks for Litecoin and Bitcoin Cash are [not as well maintained](https://github.com/decred/dcrdex/pull/1750#issuecomment-1201859406) however, so the team has created [neutrino-bch](https://github.com/dcrlabs/neutrino-bch) and [neutrino-ltc](https://github.com/dcrlabs/neutrino-ltc) forks where changes needed by DCRDEX can be merged quickly. As of writing, they have fixes missing in their upstream repositories for LTC and BCH.
 
 ![](https://user-images.githubusercontent.com/57448127/184340364-a028fc6f-018b-4709-8198-1699fd8d82f5.png) { upload }
 
@@ -218,19 +214,19 @@ _Image: System tray icon indicates that DEX client is running._
 
 ![](https://user-images.githubusercontent.com/6762864/191453209-f82c5013-e40b-442f-bd1f-bb90a32f1191.png) { upload }
 
-_Image: Supported assets in dex.decred.org footer._
+_Image: Icons for supported assets at dex.decred.org._
 
 
 ### Documentation
 
 _[dcrdocs](https://github.com/decred/dcrdocs) is the source code for Decred [user documentation](https://docs.decred.org/)._
 
-- Decred's [Business Brief](https://docs.decred.org/getting-started/business-brief/) and [Project History](https://docs.decred.org/getting-started/project-history/) pages have been [moved](https://github.com/decred/dcrdocs/pull/1206) from the old Decred website to the "Getting Started" section of [docs.decred.org](https://docs.decred.org/).
+- Decred's [Business Brief](https://docs.decred.org/getting-started/business-brief/) and [Project History](https://docs.decred.org/getting-started/project-history/) pages have been [moved](https://github.com/decred/dcrdocs/pull/1206) from the old Decred website to the Getting Started section of [docs.decred.org](https://docs.decred.org/).
 
 
 ### decred.org
 
-_[dcrweb](https://github.com/decred/dcrweb) is the source code for the decred.org website._
+_[dcrweb](https://github.com/decred/dcrweb) is the source code for the [decred.org](https://decred.org/) website._
 
 Translations:
 
@@ -246,20 +242,19 @@ Translations:
 Other:
 
 - Added @richardred's [Blockchain Analysis Part 2](https://blockcommons.red/post/dcr-on-chain-2/) to [Press](https://github.com/decred/dcrweb/pull/1066) coverage.
-- Prevent page headings from [wrapping](https://github.com/decred/dcrweb/pull/1065). { _minor fix_ }
-- Fixes { 1072 }
+- ~2 other fixes.
 
 
 ### Other
 
-[dcrwebapi](https://github.com/decred/dcrwebapi) (mainly used to get VSP information):
+[dcrwebapi](https://github.com/decred/dcrwebapi) (mainly used to serve the VSP list to Decrediton and decred.org):
 
 - Added [block height](https://github.com/decred/dcrwebapi/pull/167) and estimated network proportion to the VSP response. Unlike the last updated timestamp (currently shown at the [VSP list](https://decred.org/vsp/)), block height allows to more accurately determine if the VSP has stalled.
 - Removed [unused endpoints](https://github.com/decred/dcrwebapi/pull/170). The one to get coin supply (`gcs`) is replaced by a better maintained [dcrdata API](https://github.com/decred/dcrdata#apis) (the `/supply` endpoint), while the download count (`dc`) was only a very rough estimate based on a quite basic heuristic. If you know anyone using these endpoints please report in [issue 169](https://github.com/decred/dcrwebapi/issues/169).
 
 Software translations:
 
-- A [new status page](https://decredcommunity.github.io/translations/status) has been created to track how up-to-date are Decred software translations. Currently tracking Decrediton, DCRDEX and decred.org website.
+- A [new status page](https://decredcommunity.github.io/translations/status) has been created to track how up-to-date are Decred software translations and where help is needed. Currently tracking Decrediton, DCRDEX and decred.org website.
 
 
 ## People
